bug fix for numeric field names

--- a/src/apollo/core/templates/core/results.html
+++ b/src/apollo/core/templates/core/results.html
@@ -42,7 +42,7 @@
                         {% endfor %}
                         <td class="centered"><em><abbr title="Total Valid">TV</abbr></em></td>
                         <td class="centered"><em><abbr title="Rejected Ballots">RB</abbr></em></td>
-                        {% if form.options.has_moe %}<td class="centered"><em>MoE</em></td>{% endif %}
+                        {% if form.options.has_moe %}<td class="centered"><em><abbr title="Margin of Error">MoE</abbr></em></td>{% endif %}
                         <td class="centered" width="10%"><em>Reported</em></td>
                         <td class="centered" width="10%"><em>Missing</em></td>
                     </tr>
