--- a/src/apollo/core/templates/core/map_embed.html
+++ b/src/apollo/core/templates/core/map_embed.html
@@ -118,5 +118,20 @@
 			<div id="map_canvas" style="margin-top:3.5em;"></div>
 		</div>
 	</div>
+	{% if not debug %}
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-126343-19']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+    {% endif %}
 </body>
 </html>
